--- a/switches.yaml
+++ b/switches.yaml
@@ -1,14 +1,16 @@
-# Raspberry Pi Output Pin Control
-- platform: rpi_gpio
-  ports:
-    2: GPIO2Out
-    3: GPIO3Out
-    4: GPIO4Out
-#Arduino Output Pin Control
-# - platform: arduino
-#   pins:
-#       13:
-#           name: led
-#           initial: false
-#           negate: false
+# MQTT switch control
+- platform: mqtt
+  name: "Living Room Light"
+  command_topic: "cmnd/sonoff_switch_1/POWER"
+  state_topic: "stat/sonoff_switch_1/POWER"
+  payload_on: "ON"
+  payload_off: "OFF"
+  retain: true
 #
+- platform: mqtt
+  name: "Bed Room Light"
+  command_topic: "cmnd/sonoff_switch_2/POWER"
+  state_topic: "stat/sonoff_switch_2/POWER"
+  payload_on: "ON"
+  payload_off: "OFF"
+  retain: true
