--- a/device_tracking.yaml
+++ b/device_tracking.yaml
@@ -2,3 +2,5 @@
   host: !secret ddwrt_ap
   username: !secret ddwrt_username
   password: !secret ddwrt_password
+  interval_seconds: 0:0:10
+  considder_home: 0:03:00
