--- a/groups.yaml
+++ b/groups.yaml
@@ -7,10 +7,10 @@ living_room:
     - media_player.living_room_kodi
     - media_player.tv
     - switch.living_room_light
-    - camera.rooted_tablet
     - group.power_control
     - group.volume_control
     - group.input_control
+
 # Bed Room Tab Group
 bed_room:
   name: Bedroom
@@ -19,6 +19,7 @@ bed_room:
   entities:
     - media_player.bed_room_kodi
     - switch.bed_room_light
+
 # Stereo Controls Tab Group
 stereo_control:
   name: Stereo Control
@@ -28,6 +29,18 @@ stereo_control:
     - group.power_control
     - group.volume_control
     - group.input_control
+
+# Tab for Security and Climate
+home_control:
+  name: Home Control
+  view: yes
+  icon: mdi:home-automation
+  entities:
+    - group.ismartalarm_control
+    - climate.lyric
+    - group.switch_control
+    - camera.rooted_tablet
+
 # Automations Tab Group
 automation_cotrol:
   name: Automation Control
@@ -39,24 +52,49 @@ automation_cotrol:
     - automation.switch_to_kodi
     - automation.turn_off_the_light_when_a_movie_starts_playing
     - automation.turn_on_the_light_after_a_movie
+    - automation.disarm_ismartalarm
+    - automation.arm_ismartalarm
+    - automation.home_ismartalarm
 
+# Switches Group
+switch_control:
+  name: Switch Control
+  view: no
+  entities:
+    - switch.living_room_light
+    - switch.bed_room_light
 
+# iSmartAlarm Group
+ismartalarm_control:
+  name: iSmartAlarm Control
+  view: no
+  control: hidden
+  entities:
+    - input_boolean.alarm_set_disarm
+    - input_boolean.alarm_set_arm
+    - input_boolean.alarm_set_home
+    - automation.disarm_ismartalarm
+    - automation.arm_ismartalarm
+    - automation.home_ismartalarm
 
 # Media Players Group
 all_media_players:
   name: Media Players
   view: no
   icon: mdi:speaker
+  control: hidden
   entities:
     - media_player.living_room_kodi
     - media_player.bed_room_kodi
     - media_player.tv_chromecast
     - media_player.kitchen_home
 
+### Stereo Groups ###
 # Stereo Volume Contols
 volume_control:
   name: Volume Control
   view: no
+  control: hidden
   entities:
     - script.volume_up
     - script.volume_down
@@ -67,6 +105,7 @@ volume_control:
 power_control:
   name: Power Control
   view: no
+  control: hidden
   entities:
     - script.power_on
     - script.power_off
@@ -74,6 +113,7 @@ power_control:
 input_control:
   name: Input Control
   view: no
+  control: hidden
   entities:
     - script.input_bd
     - script.input_dvd
