--- a/sensors.yaml
+++ b/sensors.yaml
@@ -8,8 +8,8 @@
   monitored_conditions:
     - weather
     - weather_current
-    - temp_min
-    - temp_max
+    # - temp_min
+    # - temp_max
     - wind_speed
     - pressure
     - visibility
